--- a/SSE NIF Optimizer.vcxproj.filters
+++ b/SSE NIF Optimizer.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="external\nifly\src\Geometry.cpp">
       <Filter>external\nifly\src</Filter>
     </ClCompile>
+    <ClCompile Include="external\nifly\src\NifUtil.cpp">
+      <Filter>external\nifly\src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
